--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@
 }
 
 #octocat {
-  display: block;
+  display: white;
   width:384px;
   margin: 50px auto;
 }
 
 p {
-  display: block;
+  display: white;
   width: 400px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
